# trenddit-flow

./: .gitignore  CLAUDE.md  config.yml  pyproject.toml  requirements.txt
.claude/commands/: commit.md
src/notebooks/: README.md  agent_framework_comparison.ipynb  agent_framework_comparison_results.csv
