[tool.poetry]
name = "trenddit-flow"
version = "0.1.0"
description = ""
authors = ["Trenddit Team <team@trenddit.com>"]
readme = "README.md"
packages = [{include = "trenddit_flow", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
strands-agents = "^0.2.1"
strands-agents-tools = "^0.1.8"
strands-agents-builder = "^0.1.5"
langchain = "^0.3.26"
langgraph = "^0.5.2"
a2a-sdk = "^0.2.11"
openai = "^1.95.0"
anthropic = "^0.57.1"
langchain-openai = "^0.3.27"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
python-dotenv = "^1.1.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
